# Ichigo

./: pass_check.md
heart_beat/: EMG_analysis.ipynb  HRV_analysis.ipynb  hello.py  pyproject.toml
heart_beat/data/: ECGritsui_1107_goto_data_20241107_152116.csv  ECGritsui_1107_goto_timestamps_20241107_152117.csv  ECGzai_1107_goto_data_20241107_152118.csv  ECGzai_1107_goto_timestamps_20241107_152119.csv
heart_beat/data/adv/: ECG_ASMR_hatten_RyukiKishimura_1219_data.csv  ECG_ASMR_hatten_RyukiKishimura_1219_timestamps.csv  ECG_ansei_hatten_RyukiKishimura_1219_data.csv  ECG_ansei_hatten_RyukiKishimura_1219_timestamps.csv
heart_beat/data/ess1/: ECGzai_1107_goto_data.csv  ECGzai_1107_goto_timestamps.csv
heart_beat/data/ess2/: ECG_goto_hard_rock_data.csv  ECG_goto_hard_rock_timestamps.csv  ECG_goto_mood_music_data.csv  ECG_goto_mood_music_timestamps.csv
heart_beat/data/ess3/: calculating_data.csv  calculating_timestamps.csv  non_calculating_data.csv  non_calculating_timestamps.csv
heart_beat/notebook/adv/: ASMR_EMG_analysis.ipynb  ASMR_HRV_analysis.ipynb  non-ASMR_EMG_analysis.ipynb  non-ASMR_HRV_analysis.ipynb  poll_graph_overall.ipynb
heart_beat/notebook/ess1/: poll_graph_overall.ipynb  ritsui_EMG_analysis.ipynb  ritsui_HRV_analysis.ipynb  zai_EMG_analysis.ipynb  zai_HRV_analysis.ipynb
heart_beat/notebook/ess2/: mood_EMG_analysis.ipynb  mood_HRV_analysis.ipynb  poll_graph_overall.ipynb  rock_EMG_analysis.ipynb  rock_HRV_analysis.ipynb
heart_beat/notebook/ess3/: calculating_EMG_analysis.ipynb  calculating_HRV_analysis.ipynb  (+3 more)
heart_beat/report/: main.typ
(+70 files in other folders)
