[project]
name = "heart-beat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biosppy>=2.2.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "numpy>=2.0.0",
    "opensignalsreader>=0.2.2",
    "pandas>=2.2.3",
    "pyhrv>=0.4.1",
    "scipy>=1.14.1",
]
